# Control-Mapping-SARWAI

./: .rosinstall  README.md
crash_the_husky/: CMakeLists.txt  package.xml
crash_the_husky/build_isolated/: catkin_make_isolated.cache
crash_the_husky/devel_isolated/: _setup_util.py  setup.sh
crash_the_husky/include/crash_the_husky/: CrashTheHusky.h
crash_the_husky/launch/: crash_the_husky.launch
crash_the_husky/nodes/: crash_the_husky_node.cpp
crash_the_husky/resources/: google_cart.rviz
crash_the_husky/src/: CrashTheHusky.cpp
husky_kinetic/devel/: .catkin  .rosinstall  setup.sh
husky_kinetic/devel/include/husky_msgs/: HuskyStatus.h
husky_kinetic/devel/lib/interactive_marker_twist_server/: marker_server
husky_kinetic/devel/lib/pkgconfig/: custom_keyboard_interface.pc  husky_control.pc  husky_description.pc  husky_gazebo.pc  husky_msgs.pc  husky_navigation.pc  husky_viz.pc  interactive_marker_twist_server.pc  sensor_sim_gazebo.pc  ur_description.pc
husky_kinetic/devel/share/custom_keyboard_interface/cmake/: custom_keyboard_interfaceConfig.cmake
husky_kinetic/devel/share/husky_control/cmake/: husky_controlConfig.cmake
husky_kinetic/devel/share/husky_description/cmake/: husky_descriptionConfig.cmake
husky_kinetic/devel/share/husky_gazebo/cmake/: husky_gazeboConfig.cmake
husky_kinetic/devel/share/husky_msgs/cmake/: husky_msgs-msg-extras.cmake  husky_msgs-msg-paths.cmake  husky_msgsConfig.cmake
husky_kinetic/devel/share/husky_navigation/cmake/: husky_navigationConfig.cmake
husky_kinetic/devel/share/husky_viz/cmake/: husky_vizConfig.cmake
husky_kinetic/devel/share/interactive_marker_twist_server/cmake/: interactive_marker_twist_serverConfig.cmake
husky_kinetic/devel/share/sensor_sim_gazebo/cmake/: sensor_sim_gazeboConfig.cmake
husky_kinetic/devel/share/ur_description/cmake/: ur_descriptionConfig.cmake
husky_kinetic/install/: _setup_util.py
husky_kinetic/install/lib/interactive_marker_twist_server/: marker_server
husky_kinetic/install/lib/pkgconfig/: husky_control.pc  husky_description.pc  husky_msgs.pc  husky_navigation.pc  husky_viz.pc  ur_description.pc
husky_kinetic/install/share/husky_control/cmake/: husky_controlConfig.cmake
husky_kinetic/install/share/husky_description/cmake/: husky_descriptionConfig.cmake
husky_kinetic/install/share/husky_gazebo/cmake/: husky_gazeboConfig.cmake
husky_kinetic/install/share/husky_msgs/cmake/: husky_msgsConfig.cmake
husky_kinetic/install/share/husky_navigation/cmake/: husky_navigationConfig.cmake
husky_kinetic/install/share/husky_viz/cmake/: husky_vizConfig.cmake
husky_kinetic/install/share/interactive_marker_twist_server/cmake/: interactive_marker_twist_serverConfig.cmake
husky_kinetic/install/share/ur_description/cmake/: ur_descriptionConfig.cmake
husky_kinetic/src/: .rosinstall
husky_kinetic/src/husky/husky_description/launch/: description.launch
husky_kinetic/src/sensor_sim_gazebo/urdf/: stereo_camera.xacro
husky_slam/: CMakeLists.txt  package.xml
husky_slam/include/husky_slam/: HuskySlam.h
husky_slam/nodes/: HuskySlam_node.cpp
husky_slam/resouces/: husky_test.lua
husky_slam/src/: HuskySlam.cpp
husky_slam_simulation/: CMakeLists.txt  package.xml
husky_slam_simulation/config/frontier_exploration/: costmap_common.yaml
husky_slam_simulation/include/husky_slam/: HuskySlam.h
husky_slam_simulation/include/move_base_logger/: MoveBaseLogger.hpp
husky_slam_simulation/launch/: husky_slam_simulation.launch  husky_slam_simulation_explore.launch  husky_slam_simulation_kinect.launch  husky_slam_simulation_kinect2.launch  husky_slam_simulation_kinect3.launch
husky_slam_simulation/nodes/: MoveBaseLogger_node.cpp
husky_slam_simulation/resources/: google_cart.rviz  husky_test.lua  husky_test2.lua  husky_test2_original.lua  kinect_google_cart.rviz  robot.rviz
husky_slam_simulation/src/: HuskySlam (copy).cpp  HuskySlam.cpp  MoveBaseLogger.cpp
include/crash_the_husky/: CrashTheHusky.h
launch/: crash_the_husky.launch
resources/: camera_install.sh  cartographer_install.sh
resources/accessories/: kinect_camera.gazebo.xacro
resources/launch/: husky_empty_world.launch  husky_playpen.launch
src/: CrashTheHusky.cpp
(+10 files in other folders)
